# c-e

./: .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  BLACKEVOUPAPER.md  Makefile  README.md  STACK.md
.github/: CODEOWNERS  pull_request_template.md
services/cortex-agents/: Dockerfile  pyproject.toml
services/cortex-agents/cortex_agents/: __init__.py  base.py  client.py  logging.py  runner.py  signal_export.py
services/cortex-agents/cortex_agents/ad/: __init__.py  action_verifier.py  bloodhound_guard.py  drift_detector.py  kerberos_validator.py  ldap_client.py
services/cortex-agents/cortex_agents/agents/: __init__.py  ad.py  decision.py  remediation.py
services/cortex-agents/tests/: test_decision.py  test_remediation.py  test_signal_export.py
services/cortex-edge-inference/: Dockerfile  pyproject.toml
services/cortex-edge-inference/cortex_edge_inference/: config.py  main.py  metrics.py  models.py
services/cortex-edge-inference/tests/: test_edge_inference.py  test_integration.py
services/cortex-insider-decay/: Dockerfile  pyproject.toml
services/cortex-insider-decay/cortex_insider_decay/: engine.py  main.py  models.py
services/cortex-insider-decay/tests/: test_insider_decay.py
services/cortex-mcp-server/: Dockerfile  pyproject.toml
services/cortex-mcp-server/cortex_mcp_server/: __init__.py  config.py  executor.py  filters.py  main.py  router.py
services/cortex-mcp-server/cortex_mcp_server/modes/: __init__.py  batch.py  dryrun.py  multiturn.py
services/cortex-mcp-server/cortex_mcp_server/plugins/: pipeline.py  registry.py
services/cortex-mcp-server/tests/: test_main.py
services/cortex-obs-agent/: Dockerfile  pyproject.toml
services/cortex-obs-agent/cortex_obs_agent/: __init__.py  anomaly.py  main.py  models.py
services/cortex-obs-agent/tests/: test_internal_api.py
services/cortex-priority-engine/: Dockerfile  pyproject.toml
services/cortex-priority-engine/cortex_priority_engine/: engine.py  main.py  models.py
services/cortex-priority-engine/tests/: test_priority_engine.py
services/cortex-sentinel/: Dockerfile  pyproject.toml
services/cortex-sentinel/cortex_sentinel/: __init__.py
services/cortex-sentinel/sentinel/: __init__.py  engine.py  main.py  meta_decision.py  watchdog.py
services/cortex-sentinel/sentinel/collectors/: __init__.py  auditd.py  falco.py  psutil_col.py
services/cortex-sentinel/tests/: conftest.py  test_collectors.py  test_engine.py  test_meta_decision.py
services/cortex-vllm/: Dockerfile  pyproject.toml
services/cortex-vllm/cortex_vllm/: __init__.py  main.py
services/cortex-vllm/tests/: test_main.py
services/python/cortex-sentinel-machine/: Dockerfile  README.md  RUNBOOK.md  pyproject.toml
services/python/cortex-sentinel-machine/app/: __init__.py  health.py  main.py  metrics.py  models.py  runtime.py  serve.py  service.py
services/python/cortex-sentinel-machine/app/audit/: __init__.py  logger.py
services/python/cortex-sentinel-machine/app/collector/: __init__.py  base.py  composite.py  osquery.py  synthetic.py
services/python/cortex-sentinel-machine/app/config/: __init__.py  settings.py
services/python/cortex-sentinel-machine/app/cortex/: __init__.py  client.py  contracts.py  sync.py
services/python/cortex-sentinel-machine/app/drift/: __init__.py  detectors.py
services/python/cortex-sentinel-machine/app/features/: __init__.py  builder.py
services/python/cortex-sentinel-machine/app/learning_guard/: __init__.py  guard.py
services/python/cortex-sentinel-machine/app/normalizer/: __init__.py  redactor.py
services/python/cortex-sentinel-machine/app/observability/: __init__.py  http_server.py
services/python/cortex-sentinel-machine/app/policy/: __init__.py  action_guard.py  signing.py  verifier.py
services/python/cortex-sentinel-machine/app/promotion/: __init__.py  manager.py
services/python/cortex-sentinel-machine/app/scoring/: __init__.py  models.py
services/python/cortex-sentinel-machine/app/training/: __init__.py  internal_sources.py  knowledge_curator.py  local_trainer.py
services/python/cortex-sentinel-machine/app/transport/: __init__.py  client.py  contracts.py  grpc_server.py  nats_bus.py  peer_identity.py  queue.py  security.py  tls.py
services/python/cortex-sentinel-machine/config/: dev.yaml  local-queue.schema.json  model-manifest.schema.json  prod.yaml  staging.yaml
services/python/cortex-sentinel-machine/contracts/: events.md  kafka-topics.md
services/python/cortex-sentinel-machine/deploy/systemd/: cortex-sentinel-machine.service
services/python/cortex-sentinel-machine/helm/: Chart.yaml  values.yaml
services/python/cortex-sentinel-machine/helm/templates/: daemonset.yaml  serviceaccount.yaml
services/python/cortex-sentinel-machine/models/champion/: README.md
services/python/cortex-sentinel-machine/proto/: sentinel_machine.proto
services/python/cortex-sentinel-machine/scripts/: generate_proto_stubs.py
(+456 files in other folders)
