[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-vllm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
]

[tool.uv]
dev-dependencies = ["pytest==8.1.1", "httpx==0.27.0"]
